EmodelElementSupplier, EcoreCommand